--- a/index.html
+++ b/index.html
@@ -15,9 +15,51 @@
             <h3 class="nav-title">Bangladesh 2.0</h3>
             <button class="nav-btn">Sign In</button>
         </nav>
+        <div class="hero">
+            <div>
+                <h4 class="hero-subtitle">Bangladesh 2.0</h4>
+                <h1 class="hero-title">Idea, Innovation, Vision and challenges in New Bangladesh</h1>
+                <button class="hero-btn">Explore New Bangladesh</button>
+            </div>
+            <img src="Images/hero.png" alt="">
+        </div>
     </header>
     <main>
-
+        <section class="pillars">
+            <h2 class="pillars-title">Pillars of "Bangladesh 2.0"</h2>
+            <div class="p-card">
+            <div class="pillars-card">
+                <img src="Images/card-icon.png" alt="">
+                <h4 class="section-title">Innovation</h4>
+                <h5 class="section-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </h5>
+            </div>
+            <div class="pillars-card">
+                <img src="Images/card-icon.png" alt="">
+                <h4 class="section-title">Sustainability</h4>
+                <h5 class="section-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </h5>
+            </div>
+            <div class="pillars-card">
+                <img src="Images/card-icon.png" alt="">
+                <h4 class="section-title">Infrastructure</h4>
+                <h5 class="section-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </h5>
+            </div>
+            <div class="pillars-card">
+                <img src="Images/card-icon.png" alt="">
+                <h4 class="section-title">Empowerment</h4>
+                <h5 class="section-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </h5>
+            </div>
+            </div>
+        </section>
+        <section>
+            <h2 class="vision-titile">The Vison of Future</h2>
+            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="vision-card">
+                <img src="Images/card-icon.png" alt="">
+                <h4 class="section-title">Digital Transformation</h4>
+                <h5 class="section-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</h5>
+                <button class="vision-btn">Learn More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
