--- a/index.html
+++ b/index.html
@@ -50,15 +50,87 @@
             </div>
             </div>
         </section>
-        <section>
-            <h2 class="vision-titile">The Vison of Future</h2>
+        <section class="vision">
+            <div class="section-header">
+            <h2 class="pillars-title">The Vison of Future</h2>
             <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
-            <div class="vision-card">
-                <img src="Images/card-icon.png" alt="">
-                <h4 class="section-title">Digital Transformation</h4>
-                <h5 class="section-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</h5>
-                <button class="vision-btn">Learn More</button>
             </div>
+            <div class="vision-cards">
+                <div class="v-card v-card-bg1" >
+                    <img src="Images/card-icon.png" alt="">
+                    <h4 class="section-title">Digital Transformation</h4>
+                    <h5 class="section-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</h5>
+                    <button class="vision-btn">Learn More</button>
+                </div>
+                <div class="v-card v-card-bg2">
+                    <img src="Images/card-icon.png" alt="">
+                    <h4 class="section-title">Green Engergy</h4>
+                    <h5 class="section-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</h5>
+                    <button class="vision-btn">Learn More</button>
+                </div>
+                <div class="v-card v-card-bg3">
+                    <img src="Images/card-icon.png" alt="">
+                    <h4 class="section-title">Modern Infrastructure</h4>
+                    <h5 class="section-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</h5>
+                    <button class="vision-btn">Learn More</button>
+                </div>
+            </div>
+        </section>
+        <section class="quote-section">
+            <div>
+                <p class="quote-description">
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"
+                </p>
+                <h3 class="quote-title">Dr.Muhammad Yunus</h3>
+                <p class="quote-subtitle">Chief Adviser of the people's Republic of Bangladesh</p>
+            </div>
+        </section>
+        <section class="satelite-section">
+            <h class="news-title">Recent News</h>
+            <p class="news-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="news-section">
+                <img  class="satelite-img" src="Images/satelite.png" alt="">
+                <div class="news-card">
+                    <h4 class="satelite-title">Bangladesh Launches New Satellite</h4>
+                    <img src="Images/al-jazeera.png" alt="">
+                    <div class="date-time">
+                        <p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                    </div>
+                    <p class="satelite-descripiton">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="satelite-btn">Read More</button>
+                    </div>
+            </div>
+            <div class="news-section">
+                <div class="news-card-2">
+                    <h4 class="satelite-title">Bangladesh Launches New Satellite</h4>
+                    <img src="Images/al-jazeera.png" alt="">
+                    <div class="date-time">
+                        <p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                    </div>
+                    <p class="satelite-descripiton">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="satelite-btn">Read More</button>
+                    </div>
+                <img  class="satelite-img" src="Images/satelite.png" alt="">
+            </div>
+            <div class="news-section">
+                <img  class="satelite-img" src="Images/satelite.png" alt="">
+                <div class="news-card">
+                    <h4 class="satelite-title">Bangladesh Launches New Satellite</h4>
+                    <img src="Images/al-jazeera.png" alt="">
+                    <div class="date-time">
+                        <p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                    </div>
+                    <p class="satelite-descripiton">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="satelite-btn">Read More</button>
+                    </div>
+            </div>
+        </section>
+        <section>
+            <h4 class="donate-title">Donate Today</h4>
+            <p class="donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
         </section>
     </main>
     <footer>
