--- a/index.html
+++ b/index.html
@@ -128,10 +128,20 @@
                     </div>
             </div>
         </section>
-        <section>
-            <h4 class="donate-title">Donate Today</h4>
-            <p class="donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
-        </section>
+        <section class="donate-section">
+            <div>
+                <h4 class="donate-title">Donate Today</h4>
+                <p class="donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            </div>
+        <div class="donation-btn">
+        <button class="donate-btn">100 Taka</button>
+        <button class="donate-btn-active">200 Taka</button>
+        <button class="donate-btn">500 Taka</button>
+        <button class="donate-btn">1000 Taka</button>
+        </div>
+        <input type="text" placeholder="Other Amount (Taka)" class="other-amount">
+        <div><button class="donate-now-btn">Donate Now</button></div>    
+    </section>
     </main>
     <footer>
 
