footer section added

--- a/index.html
+++ b/index.html
@@ -142,9 +142,26 @@
         <input type="text" placeholder="Other Amount (Taka)" class="other-amount">
         <div><button class="donate-now-btn">Donate Now</button></div>    
     </section>
+    <section class="newsletter">
+        <div>
+            <h4 class="newsletter-title">Subscribe Newsletter</h4>
+            <p class="newsletter-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <div class="newsletter-email-subscribe">
+                <input type="email" placeholder="Enter your email here" class="newsletter-email">
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <p class="newsletter-bottom-text">We promise not to spam you!</p>
+        </div>
+    </section>
     </main>
     <footer>
-
+        <h5 class="footer-text">Bangladesh 2.0</h5>
+        <hr class="bottom-line">
+        <div class="social-link">
+           <a href=""><img src="Images/Icons/facebook.png" alt=""></a>
+           <a href=""><img src="Images/Icons/instagram.png" alt=""></a>
+           <a href=""><img src="Images/Icons/x.png" alt=""></a>
+        </div>
     </footer>
 </body>
 </html>
